@@ -502,7 +502,8 @@ drawWindowGeometry (CompWindow *w)
     {
 	if (texUnit != currentTexUnit)
 	{
-	    w->screen->clientActiveTexture (GL_TEXTURE0_ARB + texUnit);
+	    (*w->screen->clientActiveTexture) (GL_TEXTURE0_ARB + texUnit);
+	    glEnableClientState (GL_TEXTURE_COORD_ARRAY);
 	    currentTexUnit = texUnit;
 	}
 	vertices -= 2;
@@ -510,6 +511,19 @@ drawWindowGeometry (CompWindow *w)
     }
 
     glDrawArrays (GL_QUADS, 0, w->vCount);
+
+    /* disable all texture coordinate arrays except 0 */
+    texUnit = w->texUnits;
+    if (texUnit > 1)
+    {
+	while (--texUnit)
+	{
+	    (*w->screen->clientActiveTexture) (GL_TEXTURE0_ARB + texUnit);
+	    glDisableClientState (GL_TEXTURE_COORD_ARRAY);
+	}
+
+	(*w->screen->clientActiveTexture) (GL_TEXTURE0_ARB);
+    }
 }
 
 void
